--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "An integration between Notion and TMDB",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "code:build": "tsc",
+    "code:deploy": "tsc && zip -r out.zip . && az functionapp deployment source config-zip -g notion-tmdb -n nscacgyakfa6i --src out.zip",
+    "infra:deploy": "az deployment group create --mode complete -g notion-tmdb -f azure/template.bicep",
   },
   "author": "michelsalib@gmail.com",
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@azure/functions": "^4.5.0",
     "@notionhq/client": "^2.2.15",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5"
