--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "strict": true,
     "skipLibCheck": true,
     "lib": ["ES2023"],
-    "outDir": "out",
-    "sourceMap": true
+    "sourceMap": true,
   }
 }
