--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "An integration between Notion and TMDB",
   "main": "index.js",
   "scripts": {
+    "local:prepare": "func azure functionapp fetch-app-settings notion-tmdb-europe-north",
+    "local:run": "tsc && func start",
     "code:build": "tsc",
-    "code:deploy": "tsc && zip -r out.zip . && az functionapp deployment source config-zip -g notion-tmdb -n nscacgyakfa6i --src out.zip",
-    "infra:deploy": "az deployment group create --mode complete -g notion-tmdb -f azure/template.bicep"
+    "code:deploy": "tsc && zip -r out.zip . && az functionapp deployment source config-zip -g notion-tmdb-europe-north -n notion-tmdb-europe-north --src out.zip",
+    "infra:deploy": "az deployment group create --mode complete -g notion-tmdb-europe-north -f azure/template.bicep"
   },
   "author": "michelsalib@gmail.com",
   "license": "MIT",
   "type": "module",
   "dependencies": {
     "@azure/functions": "^4.5.0",
+    "@azure/cosmos": "^4.0.0",
     "@notionhq/client": "^2.2.15",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5"
