--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,41 +7,39 @@
       "command": "host start",
       "problemMatcher": "$func-node-watch",
       "isBackground": true,
-      "dependsOn": "npm watch (functions)",
+      "dependsOn": [
+        "npm watch (backend)",
+        "npm watch (frontend)"
+      ],
       "options": {
         "cwd": "${workspaceFolder}/backend"
       }
     },
     {
       "type": "shell",
-      "label": "npm build (functions)",
-      "command": "npm run build",
-      "dependsOn": "npm install (functions)",
-      "problemMatcher": "$tsc"
-    },
-    {
-      "type": "shell",
-      "label": "npm watch (functions)",
-      "command": "npm run watch",
-      "dependsOn": "npm install (functions)",
+      "label": "npm watch (backend)",
+      "command": "npm run watch --workspace backend",
       "problemMatcher": "$tsc-watch",
       "group": {
-        "kind": "build",
-        "isDefault": true
+        "kind": "build"
       },
       "isBackground": true
     },
     {
       "type": "shell",
-      "label": "npm install (functions)",
-      "command": "npm install"
-    },
-    {
-      "type": "shell",
-      "label": "npm prune (functions)",
-      "command": "npm prune --production",
-      "dependsOn": "npm build (functions)",
-      "problemMatcher": []
+      "label": "npm watch (frontend)",
+      "command": "npm run watch --workspace frontend",
+      "problemMatcher": {
+        "base": "$tsc-watch",
+        "background": {
+          "beginsPattern": "build started...",
+          "endsPattern": "built in "
+        }
+      },
+      "group": {
+        "kind": "build"
+      },
+      "isBackground": true
     }
   ]
 }
