--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,10 +4,19 @@
     "module": "node16",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
     "strict": true,
     "skipLibCheck": true,
-    "lib": ["ES2023"],
+    "lib": [
+      "ES2023",
+      "esnext.disposable"
+    ],
+    "types": [
+      "reflect-metadata"
+    ],
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
   }
 }
