--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "@azure/cosmos": "^4.0.0",
     "@azure/functions": "^4.5.0",
     "@notionhq/client": "^2.2.15",
-    "axios": "^1.7.2",
+    "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "inversify": "^6.0.2",
     "inversify-binding-decorators": "^4.0.0",
@@ -19,6 +19,6 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "start": "func start",
-    "local:prepare": "func azure functionapp fetch-app-settings notion-tmdb-europe-north"
+    "local:prepare": "func azure functionapp fetch-app-settings notion-tmdb-fr"
   }
 }
