--- a/.github/workflows/main_notion-tmdb-fr.yml
+++ b/.github/workflows/main_notion-tmdb-fr.yml
@@ -10,12 +10,11 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
@@ -28,11 +27,15 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
         run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
-          npm run build --if-present
-          npm run test --if-present
-          popd
+          npm run build --workspaces
+
+      - name: 'Create dist'
+        shell: pwsh
+        run: |
+          node support/build.js
+          cd dist
+          npm prune --workspace backend --omit dev
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -41,9 +44,8 @@ jobs:
           path: .
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
-    __environment__
     
     steps:
       - name: Download artifact from build job
@@ -57,5 +59,5 @@ jobs:
         with:
           app-name: 'notion-tmdb-fr'
           slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          package: '.'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_34EFEBDB6A7040FDB5D3AD2CDF1ED704 }}
