--- a/.github/workflows/main_notion-tmdb-fr.yml
+++ b/.github/workflows/main_notion-tmdb-fr.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,6 +52,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+
+      - name: 'Create secret .env file'
+        uses: mobiledevops/secret-to-file-action@v1
+        with:
+          base64-encoded-secret: ${{ secrets.ENVIRONMENT_VARIABLES }}
+          filename: '.env'
       
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
