👷 Update github action to v4

--- a/.github/workflows/main_notion-tmdb-fr.yml
+++ b/.github/workflows/main_notion-tmdb-fr.yml
@@ -10,7 +10,6 @@ on:
   workflow_dispatch:
 
 env:
-  NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
   build:
@@ -19,10 +18,10 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@v4
 
-      - name: Setup Node ${{ env.NODE_VERSION }} Environment
-        uses: actions/setup-node@v3
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ env.NODE_VERSION }}
+          node-version: 20
 
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
