🧑‍💻 Routing AOP, Http Server based on Fastify, abstraction from @azure/function

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,12 +2,21 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Attach to Node Functions",
+      "name": "Attach to Node Azure Functions",
       "type": "node",
       "request": "attach",
       "restart": true,
       "port": 9229,
       "preLaunchTask": "func: host start"
+    },
+    {
+      "name": "Attach to Node Fastify",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceFolder}/backend/dist/index.js",
+      "cwd": "${workspaceFolder}/backend",
+      "args": [],
+      "preLaunchTask": "node: host start"
     }
   ]
 }
