--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,13 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "node: host start",
+      "dependsOn": [
+        "npm watch (backend)",
+        "npm watch (frontend)"
+      ]
+    },
+    {
       "type": "func",
       "label": "func: host start",
       "command": "host start",
