--- a/backend/package.json
+++ b/backend/package.json
@@ -4,21 +4,25 @@
   "dependencies": {
     "@azure/cosmos": "^4.1.1",
     "@azure/functions": "^4.5.1",
+    "@fastify/cookie": "^10.0.0",
+    "@fastify/static": "^8.0.0",
     "@notionhq/client": "^2.2.15",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "fastify": "^5.0.0",
     "inversify": "^6.0.2",
     "inversify-binding-decorators": "^4.0.0",
     "mime": "^4.0.4",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
+    "@types/minimist": "^1.2.5",
     "typescript": "^5.5.4"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
     "start": "func start",
-    "local:prepare": "func azure functionapp fetch-app-settings notion-tmdb-fr"
+    "local:prepare": "func azure functionapp fetch-app-settings notion-tmdb-fr && func settings decrypt && func settings delete WEBSITE_RUN_FROM_PACKAGE"
   }
 }
