--- a/.github/workflows/main_notion-tmdb-fr.yml
+++ b/.github/workflows/main_notion-tmdb-fr.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 'Checkout GitHub Action'
+      - name: "Checkout GitHub Action"
         uses: actions/checkout@v4
 
       - name: Setup Node
@@ -23,13 +23,13 @@ jobs:
         with:
           node-version: 20
 
-      - name: 'Resolve Project Dependencies Using Npm'
+      - name: "Resolve Project Dependencies Using Npm"
         shell: bash
         run: |
           npm install
           npm run build --workspaces
 
-      - name: 'Create dist'
+      - name: "Create dist"
         shell: bash
         run: |
           node support/build.js
@@ -45,25 +45,25 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: 'Create secret .env file'
+      - name: "Create secret .env file"
         shell: bash
         env:
           ENVIRONMENT_VARIABLES: ${{ secrets.ENVIRONMENT_VARIABLES }}
         run: |
           echo "$ENVIRONMENT_VARIABLES" >> .env
-      
-      - name: 'Run Azure Functions Action'
+
+      - name: "Run Azure Functions Action"
         uses: Azure/functions-action@v1
         id: fa
         with:
-          app-name: 'notion-tmdb-fr'
-          slot-name: 'Production'
-          package: '.'
+          app-name: "notion-tmdb-fr"
+          slot-name: "Production"
+          package: "."
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_34EFEBDB6A7040FDB5D3AD2CDF1ED704 }}
