--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,12 +7,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "lib": [
-      "ES2023",
-      "DOM"
-    ],
+    "lib": ["ES2023", "DOM"],
     "sourceMap": true,
     "jsx": "react-jsx"
-  },
-  
+  }
 }
