--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "backend/dist/index.js",
   "scripts": {
     "lint": "eslint",
-    "format": "prettier",
+    "format": "prettier --write .",
     "build": "npm run build --workspaces && rm -rf dist && node support/build.js",
     "code:deploy": "cd dist && npm prune --workspace backend --omit dev && zip -r out.zip . && az functionapp deployment source config-zip -g notion-tmdb-fr -n notion-tmdb-fr --src out.zip",
     "infra:deploy": "az deployment group create --mode complete -g notion-tmdb-fr -f azure/template.bicep"
