--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,19 @@
   "devDependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.0.2",
-    "@mui/material": "^6.0.2",
-    "@types/react": "^18.3.5",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.5",
+    "react-helmet-async": "^2.0.5",
+    "react-i18next": "^15.0.2",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.6",
     "yaml": "^2.5.1"
   },
   "scripts": {
