--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,13 @@
   "dependencies": {
     "@azure/cosmos": "^4.1.1",
     "@azure/functions": "^4.5.1",
+    "@azure/storage-blob": "^12.25.0",
     "@fastify/cookie": "^10.0.1",
     "@fastify/static": "^8.0.1",
     "@notionhq/client": "^2.2.15",
+    "archiver": "^7.0.1",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "inversify": "^6.0.2",
@@ -16,6 +19,7 @@
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.2",
     "@types/minimist": "^1.2.5",
     "typescript": "^5.6.2"
   },
