--- a/.github/workflows/main_notion-tmdb-fr.yml
+++ b/.github/workflows/main_notion-tmdb-fr.yml
@@ -33,7 +33,7 @@ jobs:
       - name: "Create dist"
         shell: bash
         run: |
-          node --loader ts-node/esm/transpile-only support/build.ts
+          node --loader ts-node/esm support/build.ts
           cd dist
           npm prune --workspace backend --omit dev
 
