--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,19 @@
   "type": "module",
   "main": "dist/index.js",
   "dependencies": {
-    "@azure/cosmos": "^4.1.1",
-    "@azure/functions": "^4.5.1",
-    "@azure/storage-blob": "^12.25.0",
-    "@fastify/cookie": "^10.0.1",
-    "@fastify/static": "^8.0.1",
+    "@azure/cosmos": "^4.2.0",
+    "@azure/functions": "^4.6.0",
+    "@azure/storage-blob": "^12.26.0",
+    "@fastify/cookie": "^11.0.1",
+    "@fastify/static": "^8.0.3",
     "@notionhq/client": "^2.2.15",
     "archiver": "^7.0.1",
     "axios": "^1.7.7",
+    "axios-logger": "^2.8.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
-    "fastify": "^5.0.0",
-    "inversify": "^6.0.2",
+    "fastify": "^5.1.0",
+    "inversify": "^6.1.4",
     "inversify-binding-decorators": "^4.0.0",
     "matcher": "^5.0.0",
     "mime": "^4.0.4",
@@ -21,9 +22,9 @@
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
-    "@types/archiver": "^6.0.2",
+    "@types/archiver": "^6.0.3",
     "@types/minimist": "^1.2.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "scripts": {
     "build": "tsc",
