--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "node16",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "importHelpers": true,
     "strict": true,
     "skipLibCheck": true,
-    "lib": ["ES2023", "esnext.disposable"],
+    "lib": ["ES2023"],
     "types": ["reflect-metadata"],
     "sourceMap": true,
     "outDir": "dist",
